tests/errors/macro/macro_grid_in_line.c
#define name #define	// знак "#" здесь не предполагается

int main()
{
	return 0;
}
